 * Fix: Ensure there is a visual difference of 'active/current link' vs normal links in Windows high-contrast mode (Mohammad Areeb)
 * Fix: Avoid issues where trailing whitespace could be accidentally removed in translations for new page & snippet headers (Florian Vogt)
 * Fix: Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
 * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
 * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
 * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
 * Docs: Mention the importance of passing `request` and `current_site` to `get_url` on the performance documentation page (Jake Howard)
 * Docs: Add documentation for `register_user_listing_buttons` hook (LB (Ben Johnston))
 * Docs: Add development (contributing to Wagtail) documentation notes for development on Windows (Akua Dokua Asiedu)
 * Maintenance: Remove unsquashed `testapp` migrations (Matt Westcott)
 * Maintenance: Upgrade to Node 18 for frontend build tooling (LB (Ben) Johnston)
 * Maintenance: Run Python tests with coverage and upload coverage data to codecov (Sage Abdullah)
 * Maintenance: Clean up duplicate JavaScript for the `escapeHtml` function (Jordan Rob)
 * Maintenance: Clean up Prettier & Eslint usage for search promotions formset JS file (LB (Ben Johnston))
 * Maintenance: Ensure that translation file generation ignores JavaScript unit tests and clean up unit tests for Django gettext utils (LB (Ben Johnston))
 * Maintenance: Migrated `initButtonSelects` from core.js to own TypesScript file and add unit tests (Loveth Omokaro)
 * Maintenance: Migrated `initSkipLink` util to TypeScript and add JSDoc & unit tests (Juliet Adeboye)
 * Maintenance: Clean up some unused utility classes and migrate `unlist` to Tailwind utility class `w-list-none` (Loveth Omokaro)